Expand DataFrame API differential tests to 28 tests (153 total)
- Add 20 new TPC-DS DataFrame differential tests:
  Q12, Q13, Q15, Q19, Q20, Q26, Q37, Q41, Q43, Q45, Q48, Q50, Q55, Q62,
  Q82, Q84, Q91, Q96, Q98, Q99

- Operations now tested via DataFrame API:
  - Multi-table joins (up to 7 tables)
  - Window functions with partitionBy
  - Conditional aggregation (when/otherwise)
  - Complex filters (isin, between)
  - String functions (substring, concat_ws)
  - Left/outer joins
  - distinct() operations

- Update CURRENT_FOCUS_E2E_TEST_GAPS.md:
  - Document 153 total differential tests (all passing)
  - Add prioritized TODO list for future test suites
  - Include research findings on additional coverage areas:
    - P1: Complex data types (arrays, structs, maps)
    - P2: Window functions (rank, lag, lead, frame specs)
    - P2: Multi-dimensional aggregations (pivot, cube, rollup)
    - P3: Apache Spark DataFrameFunctionsSuite

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>